# cdn-rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile
src/: main.rs
